--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 
 /* start navigation */ 
-
+/* 
 .header_area .main-menu .navbar .navbar-brand{
     padding: 0 2rem 0 5rem;
 }
@@ -39,7 +39,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-}
+} */
 
 
 /* end navigation */ 
