--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ img {
 	width: 100%;
 	object-fit: cover;
 }
+
 p {
 	color: black;
 	font-size: 1.4rem;
@@ -98,7 +99,7 @@ p {
 	justify-content: space-between;
 	width: 100%;
 	height: 100%;
-	max-width: 1600px;
+	max-width: 1200px;
 	padding: 0 10px;
 }
 #header .nav-list ul {
@@ -127,7 +128,7 @@ p {
 	text-decoration: none;
 	color: white;
 	text-transform: uppercase;
-	padding: 10px;
+	padding: 5px;
 	
 	
 	display: block;
@@ -214,6 +215,7 @@ p {
 	background-position: top center;
 	position: relative;
 	z-index: 1;
+	
 }
 #hero::after {
 	content: '';
@@ -227,7 +229,7 @@ p {
 	z-index: -1;
 }
 #hero .hero {
-	max-width: 1200px;
+	max-width: 1000px;
 	margin: 0 auto;
 	padding: 0 50px;
 	justify-content: flex-start;
@@ -370,9 +372,10 @@ p {
 /* Projects section */
 #projects .projects {
 	flex-direction: column;
-	max-width: 1200px;
+	max-width: 1000px;
 	margin: 0 auto;
 	padding: 100px 0;
+	width: 100%;
 }
 #projects .projects-header h1 {
 	margin-bottom: 50px;
