--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ p {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: right;
+	align-items: center;
 	z-index: 1;
 	overflow-x: hidden;
 	transition: .5s ease left;
